--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
+<head>
+<meta http-equiv="refresh" content="5; URL=https://qbowersbce9.myportfolio.com/" />
+</head>
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<a href="https://qbowersbce9.myportfolio.com/">portfolio here</a>
 </body>
 </html>
